2D Gizmo glitch when using glEnable/glDisable (Blender 2.91) #81784

Closed
opened 2020-10-16 22:40:50 +02:00 by dima glib · 6 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-15 21:02, hash: ba8233174c
Worked: 2.90.1
This is probably an issue with f12b0373f3 -- it started being an issue with d39043b5ae again

Short description of error
If a GizmoGroup is 2D (doesn't have '3D' in bl_options), any glEnable/glDisable calls during dizmo drawing will result in the glitch (at least for me, the 3D viewport turns black, and the navigation gizmos lose their text/icons).

gizmo_gl_glitch_off.png gizmo_gl_glitch_on.png

Exact steps for others to reproduce the error

  1. Open the default scene in Blender 2.91
  2. Run the attached script (it will register a gizmo for Light objects)
  3. Select the light
  4. The 3D viewport will turn black

gizmo_gl_glitch.py

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-15 21:02, hash: `ba8233174c` Worked: 2.90.1 This is probably an issue with f12b0373f3 -- it started being an issue with d39043b5ae again **Short description of error** If a GizmoGroup is 2D (doesn't have '3D' in bl_options), any glEnable/glDisable calls during dizmo drawing will result in the glitch (at least for me, the 3D viewport turns black, and the navigation gizmos lose their text/icons). ![gizmo_gl_glitch_off.png](https://archive.blender.org/developer/F9000929/gizmo_gl_glitch_off.png) ![gizmo_gl_glitch_on.png](https://archive.blender.org/developer/F9000931/gizmo_gl_glitch_on.png) **Exact steps for others to reproduce the error** 1. Open the default scene in Blender 2.91 2. Run the attached script (it will register a gizmo for Light objects) 3. Select the light 4. The 3D viewport will turn black [gizmo_gl_glitch.py](https://archive.blender.org/developer/F9000930/gizmo_gl_glitch.py)
Author
Member

Added subscriber: @dairin0d

Added subscriber: @dairin0d
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, this is probably an issue with f12b0373f3 -- it started being an issue with d39043b5ae again

@fclem: I know there has been quite some work on BGL etc., dont see glEnable/glDisable mentioned in blender/blender-addons#80730 (BGL deprecation) though, nor documented that this usage needs to be tweaked in 2.91?
So: looks like a bug to me, will set to High prio (really think we should keep the bgl API working, there are potentionally lots of Addons using this)

Can confirm, this is probably an issue with f12b0373f3 -- it started being an issue with d39043b5ae again @fclem: I know there has been quite some work on BGL etc., dont see glEnable/glDisable mentioned in blender/blender-addons#80730 (BGL deprecation) though, nor documented that this usage needs to be tweaked in 2.91? So: looks like a bug to me, will set to High prio (really think we should keep the bgl API working, there are potentionally lots of Addons using this)
Clément Foucault self-assigned this 2020-10-21 17:40:53 +02:00

This issue was referenced by 5a65305f89

This issue was referenced by 5a65305f8998a72c8bf39bc69414c7ba2da57055

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81784
No description provided.