Fix T81784 BGL: Gizmo glitch when using glEnable/glDisable

This was caused by unprotected drawing callbacks.
From 2.91, we now require that all python callbacks used for
drawing needs to be safeguarded by `GPU_bgl_end()` to end the
state tracking override.